# tenders-sa

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt
scripts/: daily_monitor.py
tenders/: __init__.py  __main__.py  cache.py  client.py  contacts.py  models.py  search.py
tenders/cli/: __init__.py  backfill.py  contacts.py  history.py  search.py  setup.py  track.py  watch.py
tests/: test_cache.py  test_client.py  test_models.py  test_search.py
