[project]
name = "tenders-sa"
version = "0.1.0a"
description = "South African Government Tender Intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alfa RSA", email = "alfasanene@gmail.com" }]

dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
tenders = "tenders.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tenders*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
